// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResourceLoader > snapshots > should match snapshot IF UI component is not resolved 1`] = `
<warning-stub>
  <p>
     The component \`TestComponentMock\` for resource \`testIri\` cannot be resolved 
  </p>
</warning-stub>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF component is resolved from props 1`] = `
<dummycomponent-stub
  iri="testIri"
/>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF global component name is resolved 1`] = `
<globalcomponent-stub
  iri="testIri"
/>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF resource data is not resolved 1`] = `
<warning-stub>
  <p>
     No data received for resource \`testIri\` 
  </p>
</warning-stub>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF resource does not exist after loading 1`] = `
<warning-stub>
  <p>
     Resource \`testIri\` has not been requested 
  </p>
</warning-stub>
`;

exports[`ResourceLoader > snapshots > should match snapshot IF resource is loading 1`] = `
<div>
  <spinner-stub
    show="true"
  />
</div>
`;
